--- a/async-redux/src/App.css
+++ b/async-redux/src/App.css
@@ -1,38 +1,30 @@
-.App {
+body {
   text-align: center;
+  background-color:bisque;
+  width: 100vw;
+  height: 100vh;
+  font-family: sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.jokeList {
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.jokeList h2 {
+  font-size: 3rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.joke {
+
+}
+
+.joke h4 {
+  color: darkblue;
+}
+
+.jokeList button {
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: darkblue;
+  font-size: 1.5rem;
+  padding: 15px 40px;
 }
